--- a/websprite/lou/scroll.html
+++ b/websprite/lou/scroll.html
@@ -13,12 +13,12 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Time</a><a href="scroll.html" class="selected"> ★Scroll</a> ★Caps <a href=Structures.html>★Structures for life </a> <br> <a href="https://www.instagram.com/renougt/">★Renou</a><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html"> etcetera</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="scroll.html" class="selected"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★etcetera</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html" class="selected">★Scroll</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> etcetera</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html" class="selected">★Magdalene</a><a href=caps.html> ★Caps </a><a href="https://www.instagram.com/renougt/">★Renou</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★etcetera</a></h4>
     </div>
     <div class="images">
         <div class="proj1">Accordion book<br>2021<br> </div>
@@ -34,10 +34,8 @@
         </div>
     </div>
     <div class="phonecont">
-        <h5>Scroll</h5>
-        <img src="./images/scroll.gif">
-        <img src="./images/scrolla.gif">
-        <img src="./images/scrollpic.png">
+        <h5>Mary Magdalene WikiBook</h5>
+        <img src="images/ezgif.com-video-to-gif (1).gif">
     </div>
 </body>
 </html>
