--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -29,4 +29,10 @@
         <img src="./images/hearthands.jpg" style="width: 100%;">
     </div>
 </body>
+<footer class="footerc">
+    <div class="container">
+        <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+        <h5>CV</h5>
+    </div>
+</footer>
 </html>
