--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -24,7 +24,7 @@
         <div class="img1">
             <img src="./images/manifesto1.jpg" width="500px">
         </div>
-        <div class="proj">Typographical posters inspired by <br> the Riot Grrl Manifesto <br> </div>
+        <div class="proj"><h5>Typographical posters inspired by <br> the Riot Grrl Manifesto <br></h5> </div>
         <div class="img2">
             <img src="./images/MANIFESTO_DRAFTS-03.jpg" width="500px">
         </div>
