--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -22,18 +22,18 @@
     </div>
     <div class="images2">
         <div class="img1">
-            <img class="image2" src="./images/louprint1.jpg">
+            <img class="image2" src="./images/type_r_1.jpg">
         </div>
-        <div class="proj">Girl Online3 is a publication <br> exploring girlhood on the internet <br> the Riot Grrl Manifesto <br> </div>
+        <div class="proj"><h5>Typographical Responses to texts about graphic design </h5> </div>
         <div class="img2">
-            <img class="image2" src="./images/louweb2.jpg">
+            <img class="image2" src="./images/type_r_2.jpg">
         </div>
-        <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
+        <div class="proj2"><h5>2020 Parsons School of Design</h5> </div>
         <div class="img1">
-            <img class="image2" src="./images/louweb3.jpg">
+            <img class="image2" src="./images/hello.jpg">
         </div>
         <div class="img2">
-            <img class="image2" src="./images/igirlslide1.jpg">
+            <img class="image2" src="./images/hello2.jpg">
         </div>
     </div>
     <div class="phonecont">
