--- a/websprite/lou/Magdalene.html
+++ b/websprite/lou/Magdalene.html
@@ -20,15 +20,13 @@
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
         <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html" class="selected">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
+    <img src="./images/ezgif.com-video-to-gif (1).gif" width="600px"> 
     <div class="images">
-        <div class="proj1">Accordion book<br>2021<br> </div>
-        <div class="img2">
-            <img src="./images/Magdalene.gif" width="300px">
+        <div class="proj"><h5>Mary Magdalene WikiBook</h5> </div>
+        <div class="img2">  
         </div>
-        <div class="img1">
-            <img src="./images/Magdalene.gif" width="300px">
-        </div>
-        <div class="proj2">Long exposure images created out of a video compilation of a few hours of doomMagdaleneing printed into an accordion style fold out book. <br></div>
+        <img src="./images/Magdalene.gif" width="300px">
+        <div class="proj1"><h5>Long exposure images created out of a video compilation of a few hours of doomMagdaleneing printed into an accordion style fold out book.</h5></div>
         <div class="img2">
             <img src="./images/Magdalenepic.png" width="300px">
         </div>
