--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html class="selected">★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a</h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html class="selected">★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a</h4>
     </div>
     <div class="images">
         <div class="proj1">Gallery Posters<br>2020</div>
@@ -28,6 +28,7 @@
         <img class="img2" src="./images/NikiDeSaintPhalle2.png">
     </div>
     <div class="phonecont">
+        <h5>Gallery Posters<br>2020</h5>
         <img src="./images/NikiDeSaintPhalle1.png">  
         <img src="./images/NikiDeSaintPhalle2.png">
         <img src="./images/niki.gif">
