--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a class="selected" href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a class="selected" href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
     <div class="images2">
         <div class="img1">
@@ -33,6 +33,14 @@
             <img class="image2" src="./images/modernists.png">
             <h5>After Effects 2020</h5>
         </div>
+    </div>
+    <div class="phonecont">
+        <img src="./images/lush.gif">
+        <h5>After Effects 2019</h5>
+        <img src="./images/Good_life.gif">
+        <h5>Website Design 2020</h5>
+        <img src="./images/modernists.png">
+        <h5>Type Responses 2020</h5>
     </div>
 </body>
 </html>
