--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html" class="selected"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="">★Renou</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html" class="selected"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="">★Renou</a></h4>
     </div>
     <div class="images2">
         <div class="img1">
@@ -37,7 +37,9 @@
         </div>
     </div>
     <div class="phonecont">
+        <h5>Type Responses<br>2020</h5>
         <img src="./images/type_r_1.jpg">
+        <h6>Typographical Responses to various selected texts about graphic design</h6>
         <img src="./images/type_r_2.jpg">
     </div>
 </body>
