--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -18,7 +18,7 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html" class="selected"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html" class="selected"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
     <div class="images">
         <div class="img1">
@@ -37,7 +37,9 @@
         </div>
     </div>
     <div class="phonecont">
+        <h5>Manifesto Posters<br>2020</h5>
         <img src="./images/manifesto1.jpg">
+        <h6>Using Courier new inspired by the original Riot Grrl DIY ethos. </h6>
         <img src="./images/MANIFESTO_DRAFTS-03.jpg">
         <img src="./images/manifesto2.png">
         <img src="./images/Manifesto scan 1.jpg">
