--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -13,7 +13,7 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="scroll.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a class="selected" href="etc.html"> ★etcetera</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html>★Girl Onlin3</a><a href="louphoria.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a class="selected" href="etc.html"> ★etcetera</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
