--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -13,7 +13,7 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="scroll.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> ★etcetera</a> <a href="https://www.instagram.com/renougt/">  ★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html" class="selected"> ★loom </a><a href="etc.html"> ★etcetera</a> <a href="https://www.instagram.com/renougt/">  ★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
@@ -31,6 +31,7 @@
         <div class="projux3">2021 <br> parsons school of design <br> Digital product design <br> </div>
     </div>
     <div class="phonecont">
+        <h5>Digital Product Design Case Study<br>2020</h5>
         <img src="./images/loom1.png">
         <img src="./images/loom2.png">
         <img src="./images/loom3.png">
