--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -13,12 +13,12 @@
             <h1><a href="lou.html" class="overlay">Lourdes Salazar</a></h1>
         </div>
         <div class="titleColumn">
-            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a class="selected" href="time.html">★Type</a><a href="scroll.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★etcetera</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
+            <h2>Projects: <a href=girlonline.html> ★Girl Onlin3</a><a href="riot.html"> ★Riot Grrrl Posters</a> <br><a class="selected" href="time.html">★Type</a><a href="Magdalene.html"> ★Magdalene</a> <a href=caps.html>★Caps</a> <a href=Structures.html>★Structures for life </a> <br> <a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><a href="etc.html">★etcetera</a> <a href="https://www.instagram.com/renougt/">★Renou</a></h2>
         </div>
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html" class="selected"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="">★Renou</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html" class="selected"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★etcetera</a><br><a href="">★Renou</a></h4>
     </div>
     <div class="images2">
         <div class="img1">
