--- a/websprite/lou/ux.html
+++ b/websprite/lou/ux.html
@@ -18,8 +18,9 @@
     </div>
     <div class="phone">
         <h3><a href="lou.html">Lourdes<br>Salazar</a></h3>
-        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="scroll.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html" class="selected"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
+        <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html" class="selected"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★etcetera</a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
+    <div class="phonecont"><h5>Digitl Product Design Case Study<BR>2021</h5></div>
     <div class="images3">
         <img class="image3" src="./images/inone1.jpg">
         <div class="projux1">Digital Product Design Case Study<br>2021</div>
