--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -21,14 +21,15 @@
         <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="magdalene.html">★Magdalene</a><a href=caps.html class="selected"> ★Caps</a><br><a href="etc.html"> ★etcetera</a> </a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
     <div class="images">
-        <div class="proj1"> <br>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021</div>
+        <div class="proj1"> <h5>BLOC MAYUS 2021</h5></div>
         <div class="img2">
             <img src="./images/caps.gif">
         </div>
-        <div class="proj2">Compiled through google maps<br>exploring home from a destance</div>
-        <div class="img3">
+        <div class="proj1"> <h5>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021</h5></div>
+        <div class="img1">
             <img src="./images/bloc.gif">
         </div>
+        <div class="proj2"><h5>Compiled through google maps<br>exploring home from a destance</h5></div>
     </div>
     <div class="phonecont">
         <h5>Caps Lock</h5>
