--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -28,7 +28,7 @@
         <div class="img2">
             <img src="./images/MANIFESTO_DRAFTS-03.jpg" width="500px">
         </div>
-        <div class="proj2">Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </div>
+        <div class="proj2"><h5>Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </h5></div>
         <div class="img1">
             <img src="./images/manifesto2.png" width="500px">
         </div>
