--- a/websprite/lou/ux.html
+++ b/websprite/lou/ux.html
@@ -23,7 +23,7 @@
     <div class="phonecont"><h5>Digitl Product Design Case Study<BR>2021</h5></div>
     <div class="images3">
         <img class="image3" src="./images/inone1.jpg">
-        <div class="projux1">Digital Product Design Case Study<br>2021</div>
+        <div class="projux1"><h5>Digital Product Design Case Study<br>2021</h5></div>
         <img class="image3" src="./images/inone2.jpg">
         <img class="image3" src="./images/inone3.jpg">
         <img class="image3" src="./images/inone6.jpg">
