--- a/websprite/lou/Structures.html
+++ b/websprite/lou/Structures.html
@@ -21,10 +21,10 @@
         <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html class="selected">★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a</h4>
     </div>
     <div class="images">
-        <div class="proj1">Gallery Posters<br>2020</div>
+        <div class="proj1"><h5>Gallery Posters 2020</h5></div>
         <img class="img2" src="./images/niki.gif">
         <img class="img1" src="./images/NikiDeSaintPhalle1.png">
-        <div class="proj2">Hypothetical Gallery Posters made for The Niki De saint Phalle Structures For Life show at MomaPs1 </div>
+        <div class="proj2"><h5>Hypothetical Gallery Posters made for <br> The Niki De saint Phalle Structures<br> For Life show at MomaPs1</h5> </div>
         <img class="img2" src="./images/NikiDeSaintPhalle2.png">
     </div>
     <div class="phonecont">
