--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -22,13 +22,13 @@
     </div>
     <div class="images2">
         <img class="image3" src="./images/loom1.png">
-        <div class="projux1">Digital Product Design Case Study<br>2021 </div>
+        <div class="projux1"><h5>Digital Product Design Case Study<br>2021</h5> </div>
         <img class="image3" src="./images/loom4.png">
-        <div class="projux2">Loom is a time banking app where the currency is time this app was meant to imitate and app that would belong in the gig economy inspired by the concept of time banking this app case study is meant to imitate the idealism of some of this digital spaces. (Not actually meant to be a real app but more of an exercise in ux/ui that is more so than anything a bit satirical). </div>
+        <div class="projux2"><h5>Loom is a time banking app where the currency is time this app was meant to imitate and app that would belong in the gig economy inspired by the concept of time banking this app case study is meant to imitate the idealism of some of this digital spaces. (Not actually meant to be a real app but more of an exercise in ux/ui that is more so than anything a bit satirical).</h5> </div>
         <img class="image3" src="./images/loom5.png">
         <img class="image3" src="./images/loom6.png">
         <img class="image3" src="./images/loom7.png">
-        <div class="projux3">2021 <br> parsons school of design <br> Digital product design <br> </div>
+        <div class="projux3"><h5><br> parsons school of design <br> Digital product design <br> </h5></div>
     </div>
     <div class="phonecont">
         <h5>Digital Product Design Case Study<br>2020</h5>
