--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -39,7 +39,7 @@
     <div class="phonecont">
         <h5>Type Responses<br>2020</h5>
         <img src="./images/type_r_1.jpg">
-        <h6>Typographical Responses to various selected texts about graphic design</h6>
+        <h6>Typographical responses to various selected texts about graphic design</h6>
         <img src="./images/type_r_2.jpg">
     </div>
 </body>
