--- a/websprite/lou/Magdalene.html
+++ b/websprite/lou/Magdalene.html
@@ -35,5 +35,12 @@
         <h5>Mary Magdalene WikiBook</h5>
         <img src="images/ezgif.com-video-to-gif (1).gif">
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5>CV</h5>
+        </div>
+    </footer>
 </body>
 </html>
