--- a/websprite/lou/caps.html
+++ b/websprite/lou/caps.html
@@ -39,5 +39,12 @@
         <h6>A typographical landscape exploration of Guatemala city's loud all caps signage.<br>2021
         </h6>
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5>CV</h5>
+        </div>
+    </footer>
 </body>
 </html>
