--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -42,5 +42,12 @@
         <img src="./images/modernists.png">
         <h6>Type Responses 2020</h6>
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5>CV</h5>
+        </div>
+    </footer>
 </body>
 </html>
