--- a/websprite/lou/loom.html
+++ b/websprite/lou/loom.html
@@ -46,5 +46,12 @@
         <img src="./images/loom12.png">
         <img src="./images/loom13.png">
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5>CV</h5>
+        </div>
+    </footer>
 </body>
 </html>
