--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -44,5 +44,12 @@
         <img src="./images/manifesto2.png">
         <img src="./images/Manifesto scan 1.jpg">
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5>CV</h5>
+        </div>
+    </footer>
 </body>
 </html>
