--- a/websprite/lou/girlonline.html
+++ b/websprite/lou/girlonline.html
@@ -21,24 +21,24 @@
         <h4>Projects: <br> <a class="selected" href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href=Structures.html>★Structures for life </a><br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="etc.html"> ★etcetera</a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
 </div>
     <div class="images">
+        <div class="img2">
+            <img class="image2" src="./images/igirlslide1.jpg">
+        </div>
+        <div class="proj1"><h5>Girl Online3 is a publication <br> exploring girlhood on the internet <br> </h5></div>
         <div class="img1">
             <img  src="./images/louprint1.jpg" width="800px">
         </div>
-        <div class="proj1"><h5>Girl Online3 is a publication <br> exploring girlhood on the internet <br> </h5></div>
+        <div class="img1">
+            <img src="./images/louweb3.jpg" width="700px">
+        </div>
+        <div class="proj3"><h5>Playing with identity and style online?</h5></div>
         <div class="img2">
-            <img class="image2" src="./images/igirlslide1.jpg">
+            <img class="image2" src="./images/spread33.jpg">
         </div>
         <div class="proj2"><h5>On the internet, the power of using images to convey meaning when grouped together has become more present over time. Teenage girls understand this while navigating the internet at an early age; and have turned this into a part of their internet experience. Using images to express themselves, girls carefully curated ways in order to stand out and find others who have similar aesthetic sensibilities.
         Similarly to the ways in which subcultural style used to work but is detached from any IRL base—the images live in the digital realm in the shape of tumblr blogs, pinterest mood boards, tik toks and other social media.
         Girl online is a project about the act of making meaning out of the organization of images. And the way in which young people, specifically girls, do this by packaging their online personas into different “aesthetics” that are articulated through the grouping of images and media that then become trends that are sold back to them, trapped in an endless cycle of consumption.
         Using the research gathered from aesthetics wiki and my own time spent online, this project attempts to create a printed version of the online world of “aesthetics.” Through the use of webs that explicitly show these connections in the format of a magazine. By using a traditional medium generally used to sell aspirational visuals for women in the same way that social media images often do. </h5></div>
-        <div class="img1">
-            <img src="./images/louweb3.jpg" width="700px">
-        </div>
-        <div class="proj3">How can we play with identity and style online and IRL?</div>
-        <div class="img2">
-            <img class="image2" src="./images/spread33.jpg">
-        </div>
     </div>
     <div class="phonecont">
         <h5>Girl Onlin3<br>ongoing</h5>
@@ -51,5 +51,12 @@
         Girl online is a project about the act of making meaning out of the organization of images. And the way in which young people, specifically girls, do this by packaging their online personas into different “aesthetics” that are articulated through the grouping of images and media that then become trends that are sold back to them, trapped in an endless cycle of consumption.
         Using the research gathered from aesthetics wiki and my own time spent online, this project attempts to create a printed version of the online world of “aesthetics.” Through the use of webs that explicitly show these connections in the format of a magazine. By using a traditional medium generally used to sell aspirational visuals for women in the same way that social media images often do. </h6></div>
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <h5>CV</h5>
+        </div>
+    </footer>
 </body>
 </html>
