--- a/websprite/lou/time.html
+++ b/websprite/lou/time.html
@@ -42,5 +42,12 @@
         <h6>Typographical responses to various selected texts about graphic design</h6>
         <img src="./images/type_r_2.jpg">
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
+        </div>
+    </footer>
 </body>
 </html>
