--- a/websprite/lou/ux.html
+++ b/websprite/lou/ux.html
@@ -34,5 +34,12 @@
         <img class="image3" src="./images/inone12.jpg">
         <img class="image3" src="./images/inone14.jpg">
     </div>
+    <footer class="footerc">
+        <div class="container">
+            <img src="./images/hearthands.jpg" width="40px">
+            <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
+            <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
+        </div>
+    </footer>
 </body>
 </html>
