--- a/websprite/lou/girlonline.html
+++ b/websprite/lou/girlonline.html
@@ -28,12 +28,12 @@
         <div class="img1">
             <img  src="./images/louprint1.jpg" width="800px">
         </div>
-        <div class="img1">
-            <img src="./images/louweb3.jpg" width="700px">
+        <div class="img2">
+            <img class="image2" src="./images/spread33.jpg" width="700px">
         </div>
         <div class="proj3"><h5>Playing with identity and style online?</h5></div>
-        <div class="img2">
-            <img class="image2" src="./images/spread33.jpg">
+        <div class="img1">
+            <img src="./images/louweb3.jpg" width="800px">
         </div>
         <div class="proj2"><h5>On the internet, the power of using images to convey meaning when grouped together has become more present over time. Teenage girls understand this while navigating the internet at an early age; and have turned this into a part of their internet experience. Using images to express themselves, girls carefully curated ways in order to stand out and find others who have similar aesthetic sensibilities.
         Similarly to the ways in which subcultural style used to work but is detached from any IRL base—the images live in the digital realm in the shape of tumblr blogs, pinterest mood boards, tik toks and other social media.
