--- a/websprite/lou/girlonline.html
+++ b/websprite/lou/girlonline.html
@@ -31,25 +31,25 @@
         <div class="img2">
             <img class="image2" src="./images/spread33.jpg" width="700px">
         </div>
-        <div class="proj3"><h5>Playing with identity and style online?</h5></div>
+        <h5>Playing with identity and style online?</h5>
         <div class="img1">
             <img src="./images/louweb3.jpg" width="800px">
         </div>
-        <div class="proj2"><h5>On the internet, the power of using images to convey meaning when grouped together has become more present over time. Teenage girls understand this while navigating the internet at an early age; and have turned this into a part of their internet experience. Using images to express themselves, girls carefully curated ways in order to stand out and find others who have similar aesthetic sensibilities.
-        Similarly to the ways in which subcultural style used to work but is detached from any IRL base—the images live in the digital realm in the shape of tumblr blogs, pinterest mood boards, tik toks and other social media.
-        Girl online is a project about the act of making meaning out of the organization of images. And the way in which young people, specifically girls, do this by packaging their online personas into different “aesthetics” that are articulated through the grouping of images and media that then become trends that are sold back to them, trapped in an endless cycle of consumption.
-        Using the research gathered from aesthetics wiki and my own time spent online, this project attempts to create a printed version of the online world of “aesthetics.” Through the use of webs that explicitly show these connections in the format of a magazine. By using a traditional medium generally used to sell aspirational visuals for women in the same way that social media images often do. </h5></div>
+        <div class="proj2"><h5>Volume One of publication examining girlhood on the internet and the impact of image collecting and associating in personal style and identity. </h5></div>
+        <div class="img2">
+            <img src="./images/spread11.jpg" width="700px">
+        </div>
     </div>
     <div class="phonecont">
         <h5>Girl Onlin3<br>ongoing</h5>
         <img class="image2" src="./images/louprint1.jpg">
-        <div class="proj1"><h6>Girl Online3 is a publication exploring girlhood on the internet <br> </h6></div>
+        <img class="image2" src="./images/louweb3.jpg">
         <img class="image2" src="./images/louweb2.jpg">
         <img class="image2" src="./images/igirlslide1.jpg">
-        <div class="proj2"><h6>On the internet, the power of using images to convey meaning when grouped together has become more present over time. Teenage girls understand this while navigating the internet at an early age; and have turned this into a part of their internet experience. Using images to express themselves, girls carefully curated ways in order to stand out and find others who have similar aesthetic sensibilities.
-        Similarly to the ways in which subcultural style used to work but is detached from any IRL base—the images live in the digital realm in the shape of tumblr blogs, pinterest mood boards, tik toks and other social media.
-        Girl online is a project about the act of making meaning out of the organization of images. And the way in which young people, specifically girls, do this by packaging their online personas into different “aesthetics” that are articulated through the grouping of images and media that then become trends that are sold back to them, trapped in an endless cycle of consumption.
-        Using the research gathered from aesthetics wiki and my own time spent online, this project attempts to create a printed version of the online world of “aesthetics.” Through the use of webs that explicitly show these connections in the format of a magazine. By using a traditional medium generally used to sell aspirational visuals for women in the same way that social media images often do. </h6></div>
+        <img class="image2" src="./images/spread11.jpg">
+        <img class="image2" src="./images/spread33.jpg">
+        <div class="proj1"><h6>Girl Online3 is Volume One of publication examining girlhood on the internet and the impact of image collecting and associating in personal style and identity.  </h6></div>
+        <div class="proj2"><h6></h6></div>
     </div>
     <footer class="footerc">
         <div class="container">
