--- a/websprite/lou/riot.html
+++ b/websprite/lou/riot.html
@@ -22,19 +22,20 @@
     </div>
     <div class="images">
         <div class="img1">
-            <img src="./images/manifesto1.jpg" width="500px">
+            <img src="./images/Manifesto scan 1.jpg" width="500px">
         </div>
         <div class="proj"><h5>Typographical posters inspired by <br> the Riot Grrl Manifesto <br></h5> </div>
         <div class="img2">
-            <img src="./images/MANIFESTO_DRAFTS-03.jpg" width="500px">
-        </div>
-        <div class="proj2"><h5>Using Courier new inspired by <br> the original Riot Grrl DIY ethos. </h5></div>
-        <div class="img1">
             <img src="./images/manifesto2.png" width="500px">
         </div>
+        <div class="proj2"><h5>Using Courier new inspired by <br> the original Riot Grrl DIY ethos.<br> Flyer is designed for easy reproduction. </h5></div>
         <div class="img2">
-            <img src="./images/Manifesto scan 1.jpg" width="500px">
+            <img src="./images/MANIFESTO_DRAFTS-03.jpg" width="500px">
         </div>
+        <div class="img1">
+            <img src="./images/manifesto1.jpg" width="500px">
+        </div>
+        <div class="proj3"><h5>Combining Scanning </h5></div>
     </div>
     <div class="phonecont">
         <h5>Manifesto Posters<br>2020</h5>
