--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -23,9 +23,9 @@
             <h3><a class="selected" href="lou.html">Lourdes<br>Salazar</a></h3>
             <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
-    <div class="loulou">
-        <img src="images/lou_lou.gif">
-    </div>
+        <div class="container">
+            <div id="json-gallery"></div>
+          </div>
     <div class="phonecont">
         <img src="./images/lou_lou.gif" style="width: 100%;">
         <img src="./images/lou_lou.gif" style="width: 100%;">
@@ -39,4 +39,5 @@
         <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
     </div>
 </footer>
+<script src="assets/js/json-gallery.min.js"></script>
 </html>
