home pag updatea

--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="louphoria.css">
+    <link rel="stylesheet" href="style.css">
     <title>scroll</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
     </style>
+    <script src="assets/js/json-gallery.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="title">
@@ -23,21 +25,25 @@
             <h3><a class="selected" href="lou.html">Lourdes<br>Salazar</a></h3>
             <h4>Projects: <br> <a href=girlonline.html>★Girl Onlin3</a><a href="time.html"> ★Type </a><br><a href="riot.html"> ★Riot Grrrl Posters</a><br><a href="Magdalene.html">★Magdalene</a><a href=caps.html> ★Caps </a><br><a href="etc.html"> ★etcetera</a><br><a href=Structures.html>★Structures for life </a> <br><a href="ux.html"> ★inone </a><a href="loom.html"> ★loom </a><br><a href="https://www.instagram.com/renougt/">★Renou</a></h4>
     </div>
-        <div class="container">
-            <div id="json-gallery"></div>
-          </div>
+<div class="contents">
+    <div class="img1">
+        <img src="./images/workreel.gif" style="width: 600px;">
+    </div>
+    <div class="about me">
+        <h5>Hi hello world welcome to my little corner of the internet<br>I am a graphic designer based in brooklyn. Things I love:<br>print, editorial, fashion, people and the internet!<br>thank you for visiting my site and checking out my work.<br> I am always open to collaborate and meet creative people. <br>Come back soon!</h5>
+    </div>
+</div>
     <div class="phonecont">
         <img src="./images/lou_lou.gif" style="width: 100%;">
         <img src="./images/lou_lou.gif" style="width: 100%;">
         <img src="./images/lou_lou.gif" style="width: 100%;">
     </div>
 </body>
-<footer class="footerc">
+<footer class="footer">
     <div class="container">
         <img src="./images/hearthands.jpg" width="40px">
         <h5><a href = "mailto: lousalazarcastillo@gmail.com">Email Me</a></h5>
         <a href="./images/resume_latest.pdf"><h5>CV</h5></a>
     </div>
 </footer>
-<script src="assets/js/json-gallery.min.js"></script>
 </html>
