--- a/websprite/lou/lou.html
+++ b/websprite/lou/lou.html
@@ -34,9 +34,7 @@
     </div>
 </div>
     <div class="phonecont">
-        <img src="./images/lou_lou.gif" style="width: 100%;">
-        <img src="./images/lou_lou.gif" style="width: 100%;">
-        <img src="./images/lou_lou.gif" style="width: 100%;">
+        <img src="./images/workreel.gif" style="width: 100%;">
     </div>
 </body>
 <footer class="footer">
