--- a/websprite/lou/etc.html
+++ b/websprite/lou/etc.html
@@ -22,29 +22,29 @@
     </div>
     <div class="images2">
         <div class="img1">
-            <img class="image2" src="./images/lush.gif">
-            <h5>After Effects 2020</h5>
+            <img class="image2" src="./images/vrhoe4.jpg">
         </div>
         <div class="img2">
             <img class="image2" src="./images/Good_life.gif">
-            <h5>Website Design 2020</h5>
         </div>
         <div class="img1">
-            <img class="image2" src="./images/modernists.png">
-            <h5>After Effects 2020</h5>
+            <img class="image2" src="./images/lush.gif">
         </div>
         <div class="img2">
-            <img class="image2" src="./images/">
-            <h5>After Effects 2020</h5>
+            <img class="image2" src="./images/sale.gif">
+        </div>
+        <div class="img1">
+            <img class="image2" src="./images/trip.gif">
+        </div>
+        <div class="img2">
+            <img class="image2" src="./images/sale.gif">
         </div>
     </div>
     <div class="phonecont">
+        <img src="./images/vrhoe4.jpg">
         <img src="./images/lush.gif">
-        <h6>After Effects 2019</h6>
         <img src="./images/Good_life.gif">
-        <h6>Website Design 2020</h6>
         <img src="./images/modernists.png">
-        <h6>Type Responses 2020</h6>
     </div>
     <footer class="footerc">
         <div class="container">
